[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mlog"
version = "0.0.1"
authors = [
  { name="Tobias Egelund", email="egelundtobias@gmail.com" },
]
description = "A library to log input and output of machine learning systems"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["logging", "machine learning", "dataframe"]
classifiers = [
    "Package :: mlog",
    "Programming Language :: Python :: 3.8",
    "License :: MIT License",
]
dependencies = [
    "numpy",
    "pandas",
    'python_version>="3.8"',
]

[project.urls]
"Homepage" = "https://github.com/tobiasegelund/mlog"
"Bug Tracker" = "https://github.com/tobiasegelund/mlog/issues"

[tool.setuptools.packages.find]
include = ["mlog"]
exclude = [".gitignore", "tests", "Makefile", "requirements"]